[tool.poetry]
name = "deqr"
version = "0.2.2"
description = "qr code decoding library"
authors = ["torque <torque@users.noreply.github.com>"]
license = "LGPL-2.1-or-later"
readme = ["README.md", "CHANGELOG.md"]
repository = "https://github.com/torque/deqr"
documentation = "https://torque.github.io/deqr-docs/"
build = {script = "build.py", generate-setup-file = true}
include = [
    {path = "deps/qrdec/src", format = "sdist"},
    {path = "deps/quirc/lib", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Cython = {version = "3.0.0b3", allow-prereleases = true}

# tests
pytest = ">=7.0.0"
Pillow = ">=8.0.0"
numpy = ">=1.20.0"

# documentation
sphinx = "^4.0.0"
sphinx-copybutton = "^0.4.0"
furo = "^2022.1.2"
sphinx-inline-tabs = ">=2022.1.2-beta.11"

[build-system]
requires = [
    "cython==3.0.0b3",
    "poetry-core>=1.6.0,<1.7.0",
    "setuptools>=40.9.0",
    "wheel",
]
build-backend = "poetry.core.masonry.api"
