[project]
name = "deqr"
version = "0.2.2"
description = "qr code decoding library"
authors = [{ name = "torque", email = "torque@users.noreply.github.com" }]
license = "LGPL-2.1-or-later"
license-files = ["COPYING", "LICENSE.isc", "LICENSE.lgpl"]
readme = "README.md"
keywords = ["qr", "qr code", "decoder"]
requires-python = ">=3.10,<4.0"
dependencies = []

[project.urls]
Repository = "https://github.com/torque/deqr"
Documentation = "https://torque.github.io/deqr-docs/"
Issues = "https://github.com/torque/deqr/issues"
Changelog = "https://github.com/torque/deqr/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "cython==3.1.2",
    "pytest>=7.0.0",
    "Pillow>=8.0.0",
    "numpy>=1.20.0",
]
documentation = [
    "sphinx==7.4.7",
    "sphinx-copybutton==0.5.2",
    "furo==2024.4.27",
    "sphinx-inline-tabs==2023.4.21",
]

[tool.poetry]
build = { script = "build.py", generate-setup-file = true }
include = [
    { path = "deps/qrdec/src", format = "sdist" },
    { path = "deps/quirc/lib", format = "sdist" },
]

[build-system]
requires = [
    "cython==3.1.2",
    "poetry-core==2.1.3",
    "setuptools==80.9.0",
    "wheel==0.46.1",
]
build-backend = "poetry.core.masonry.api"
